# qasm3to2

./: .editorconfig  .gitignore  CHANGELOG.md  TODO.md  qasm3to2.cabal  test.qasm
.monitor/: .gitignore  monitor  up-to-date
app/: Ast.hs  Chatty.hs  Main.hs  Qasm2.hs  Qasm2Parser.hs  Qasm3.hs  Qasm3Arbitrary.hs  Qasm3Lexer.x  Qasm3Parser.y  Qasm3SemanticAnalyzer.hs  Qasm3To2.hs  Qasm3To2Tests.hs
app/Qasm3/: Lexer.x  Parser.y  Result.hs  SemanticAnalyzer.hs  SemanticGraph.hs  Syntax.hs
app/Qasm3/Test/: Arbitrary.hs
openqasm-examples/: adder.ast  alignment.ast  arrays.ast  cphase.ast  dd.ast  defcal.ast  gateteleport.ast  inverseqft1.ast  inverseqft2.ast  ipe.ast  msd.ast  qec.ast  qft.ast  qpt.ast  rb.ast  rus.ast  scqec.ast  stdgates.ast  t1.ast  teleport.ast  varteleport.ast  vqe.ast
playground/: Main.hs
test-data/: 00-trivial.qasm  01-end.qasm  10-basic.ast  10-basic.qasm
