cabal-version:      3.4
name:               qasm3to2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Joseph Lunderville
maintainer:         joseph_lunderville@sfu.ca

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable qasm3to2
    main-is:            Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      Qasm3, Qasm2, Qasm3To2

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base, containers, transformers
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost

test-suite qasm3to2-testsuite
    main-is:            Qasm3To2Tests.hs
    other-modules:      Qasm3, Qasm2, Qasm3To2
    type:               exitcode-stdio-1.0
    build-depends:      base, containers, transformers, HUnit
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost
