cabal-version:      2.4
name:               qasm3to2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Joseph Lunderville
maintainer:         joseph_lunderville@sfu.ca

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable qasm3to2
    main-is:            Main.hs
    other-modules:      Ast, Qasm2, Qasm2Parser, Qasm3, Qasm3Lexer,
                        Qasm3Parser, Qasm3To2
    build-depends:      array, base, containers, directory, transformers
    build-tool-depends: happy:happy, alex:alex
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost, FlexibleInstances

test-suite qasm3to2-testsuite
    main-is:            Qasm3To2Tests.hs
    other-modules:      Ast, Qasm2, Qasm2Parser, Qasm3, Qasm3Arbitrary,
                        Qasm3Lexer, Qasm3Parser, Qasm3To2
    type:               exitcode-stdio-1.0
    build-depends:      array, base, containers, transformers, HUnit, QuickCheck
    build-tool-depends: happy:happy, alex:alex
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost, FlexibleInstances
