cabal-version:      2.4
name:               qasm3to2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Joseph Lunderville
maintainer:         joseph_lunderville@sfu.ca

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable qasm3to2
    main-is:            Main.hs
    other-modules:      Ast,
                        Qasm2,
                        Qasm2Parser,
                        Qasm3.Lexer,
                        Qasm3.Parser,
                        Qasm3.SemanticAnalyzer,
                        Qasm3.SemanticGraph,
                        Qasm3.Syntax,
                        Qasm3To2
    build-depends:      array, base, containers, directory, mtl, transformers
    build-tool-depends: happy:happy, alex:alex
    hs-source-dirs:     app
    default-language:   GHC2021

test-suite qasm3to2-testsuite
    main-is:            Qasm3To2Tests.hs
    other-modules:      Qasm3.Test.Arbitrary,
                        Qasm3.Lexer,
                        Qasm3.Parser,
                        Qasm3.SemanticAnalyzer,
                        Qasm3.SemanticGraph,
                        Qasm3.Syntax,
                        Ast,
                        Qasm2,
                        Qasm2Parser,
                        Qasm3To2
    type:               exitcode-stdio-1.0
    build-depends:      array, base, containers, mtl, transformers, HUnit,
                        QuickCheck
    build-tool-depends: happy:happy, alex:alex
    hs-source-dirs:     app
    ghc-options:        -main-is Qasm3To2Tests
    default-language:   GHC2021

executable playground
    main-is:            Main.hs
    hs-source-dirs:     playground
    build-depends:      base, containers, mtl
    default-language:   GHC2021
